# picard_metrics_sqlite

./: .cruft.json  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  .travis.yml  Dockerfile  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
docker/: Dockerfile
picard_metrics_sqlite/: __main__.py  main.py
picard_metrics_sqlite/metrics/: gatk_calculatecontamination.py  metrics.py  metrics_util.py  picard_collectalignmentsummarymetrics.py  picard_collecthsmetrics.py  picard_collectmultiplemetrics.py  picard_collectoxogmetrics.py  picard_collectrnaseqmetrics.py  picard_collecttargetedpcrmetrics.py  picard_collectwgsmetrics.py  picard_markduplicates.py
picard_metrics_sqlite/tools/: picard_validatesamfile.py
tests/: test_main.py
